<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/title" />

    <include
        android:id="@+id/bottommenu"
        layout="@layout/common_bottom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottommenu"
        android:layout_below="@id/title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/edit"
                android:layout_width="145dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dip"
                android:background="@drawable/btn_pink"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/self_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dip"
                android:layout_marginTop="0dip"
                android:visibility="gone" />

            <include layout="@layout/common_listview" />

            <LinearLayout
                android:id="@+id/post_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/label_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comment"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/comment_content"
                    android:layout_width="fill_parent"
                    android:layout_height="180dip"
                    android:layout_margin="10dip"
                    android:gravity="top"
                    android:inputType="text"
                    android:scrollbars="vertical" />

                <!-- btn -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_photo"
                        android:layout_width="100dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/btn_blue"
                        android:gravity="center"
                        android:text="@string/photo"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btn_cancel_photo"
                        android:layout_width="100dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/btn_blue"
                        android:gravity="center"
                        android:text="@string/cancel_photo"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="100dip"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_pink"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>