<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:id="@+id/bottommenu" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_background_color"
        android:orientation="horizontal"
        android:paddingTop="3dip" >

        <LinearLayout
            android:id="@+id/menu_home"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="@drawable/menu"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/menu_home_img"
                android:layout_width="wrap_content"
                android:layout_height="27dip"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menu_home_released" />

            <TextView
                android:id="@+id/menu_home_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/menu_home"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_product"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="@drawable/menu"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/menu_product_img"
                android:layout_width="wrap_content"
                android:layout_height="27dip"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menu_product_released" />

            <TextView
                android:id="@+id/menu_product_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/menu_product"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="@drawable/menu"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/menu_search_img"
                android:layout_width="wrap_content"
                android:layout_height="27dip"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menu_search_released" />

            <TextView
                android:id="@+id/menu_search_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/menu_search"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_my_beauty"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="@drawable/menu"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/menu_my_beauty_img"
                android:layout_width="wrap_content"
                android:layout_height="27dip"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menu_my_beauty_released" />

            <TextView
                android:id="@+id/menu_my_beauty_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/menu_my_beauty"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_more"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:background="@drawable/menu"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/menu_more_img"
                android:layout_width="wrap_content"
                android:layout_height="27dip"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/menu_more_released" />

            <TextView
                android:id="@+id/menu_more_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/menu_more"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>